syntax = "proto3";

message User{
    string id = 1;
    string username = 2;
    string email = 3;
}

message SignUpRequest{
    string username =1;
    string password = 2;
    string email = 3;
    string phone = 4;
}

message SignUpResponse{
    string token = 1;
    string message = 2;
    int32 error = 3;
    User user = 4;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string message = 1;
    int32 error = 2;
    string token = 3;
    User user = 4;
}

service AuthService{
    rpc signup(SignUpRequest) returns (SignUpResponse);
    rpc login(LoginRequest) returns (LoginResponse);
}