syntax = "proto3";

service FriendService{
    rpc addFriend(AddFriendrequest) returns (FriendResponse);
    // rpc removeFriend(RemoveFriendRequest) returns (FriendResponse); 
    rpc rejectFriendRequest(RequestId) returns (FriendResponse);
    rpc approveFriendRequest(RequestId) returns (FriendResponse);
}

message AddFriendrequest{
    string userid =1 ;
    string tofriendid = 2;
    string note  = 3;
}

message FriendResponse{
    int32 error = 1;
    string message = 2;
}

message RemoveFriendRequest{
    string userid =1 ;
    string tounfriend = 2;
}

message RequestId{
    string token = 1;
    string requestid = 2;
    string userid = 3;
}
