syntax = "proto3";

service UserService{
    rpc getUserInfo(UserIdRequest) returns (UserResponse);
    rpc getUsers(Empty) returns (UsersResponse);
    rpc getUserFriendRequests(UserIdRequest) returns (FriendRequestResponse);
    rpc editUser(UserEditRequest) returns (UserEditResponse);
}

message Empty{
}

message UserInfo{
    string id = 1;
    string email = 2;
    string username = 3;
    repeated UserInfo friends = 4;
    optional string phone = 5;
    optional string profilePic = 6;
}

message UserIdRequest{
    string userid = 1;
}

message UserResponse{
    int32 error = 1;
    string message = 2;
    UserInfo user = 3;
}

message UsersResponse{
    int32 error = 1;
    string message = 2;
    repeated UserInfo users = 3;
}

message FriendRequest{
    UserInfo user = 1;
    string note = 2;
    string id = 3;
}

message FriendRequestResponse{
    int32 error = 1;
    string message = 2;
    repeated FriendRequest requests = 4;
}

message UserEditRequest{
    string token = 1;
    string username = 2;
    string phone = 3;
    string profilePic = 4;
}

message UserEditResponse{
    int32 error = 1;
    string message = 2;
    UserInfo user = 3;
}